clang/test/BSC/Negative/Ownership/Borrow/borrow_template_crash/borrow_template_crash.cbs
// RUN: %clang_cc1 -xbsc -fsyntax-only -verify %s

struct Simple {
    int *borrow p;
};

struct Pair<T, U> {
    T *owned first;
    U *borrow second;
};

struct Container<T> {
    T element;
};

struct Nested {
    struct Simple s;
};

void test_crash() {
    struct Simple s; // expected-error {{variable declarations of borrow qualified must be initialized}}
    struct Pair<int, char> p; // expected-error {{variable declarations of borrow qualified must be initialized}}
    struct Nested n; // expected-error {{variable declarations of borrow qualified must be initialized}}
    struct Container<struct Simple> c; // expected-error {{variable declarations of borrow qualified must be initialized}}
    struct Container<struct Pair<int, int>> cp; // expected-error {{variable declarations of borrow qualified must be initialized}}
}